[package]
name = "fastsync"
authors = ["Chorus One <techops@chorus.one>"]
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
libc = "0.2.153"
borsh = { version = "1.3.1", features = ["derive"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
