[package]
name = "fastsync"
authors = ["Chorus One <techops@chorus.one>"]
version = "1.0.0"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
libc = "0.2.153"
borsh = { version = "1.3.1", features = ["derive"] }
walkdir = "2.5.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true

[dev-dependencies]
tempfile = "3.11.0"

[lib]
name = "ratelimiter"
path = "src/ratelimiter.rs"
